Fix validation bug

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -43,6 +43,12 @@
         input[type='checkbox'] {
             width: 1rem;
         }
+        .value-warning {
+            themed color danger
+        }
+        .fa-exclamation-circle {
+            padding-left: 1rem;
+        }
     }
 
     label {
