Nicer arrival of rengo-auto-start bad-value warning

--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -45,9 +45,13 @@
         }
         .value-warning {
             themed color danger
+            opacity: 1.0 !important;
+            transition: opacity 1s;
+            transition-timing-function: cubic-bezier(.67,-0.01,.99,0);
         }
         .fa-exclamation-circle {
             padding-left: 1rem;
+            opacity: 0.0;
         }
     }
 
