--- a/src/components/ChallengeModal/ChallengeModal.styl
+++ b/src/components/ChallengeModal/ChallengeModal.styl
@@ -43,6 +43,10 @@
         input[type='checkbox'] {
             width: 1rem;
         }
+
+        // we ease this warning in after about a second, in case
+        // the user is in the middle of typing a valid number that
+        // starts with the invalid values '1' or '2'
         .value-warning {
             themed color danger
             opacity: 1.0 !important;
