Fixed BanModal circular dep

--- a/src/components/BanModal/BanModal.styl
+++ b/src/components/BanModal/BanModal.styl
@@ -22,7 +22,7 @@
     max-width: 90vw;
     text-align: center;
 
-    .Player {
+    .player-name {
         font-size: 1.5rem;
         margin: auto;
         padding-bottom: 1rem;
