--- a/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
+++ b/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
@@ -16,10 +16,14 @@
  */
 
 
-.GameAcceptModal.Modal {
+.ChallengeDetailsReviewPane {
     width: 100%;
     max-width: 30rem;
 
+    h4 {
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
     dt {
         width: 50%;
     }
