--- a/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
+++ b/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
@@ -24,6 +24,15 @@
     .Card {
         max-width: 30rem;
 
+        .invitation {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .invite-text {
+                padding-bottom: 0.75rem;
+            }
+        }
         dt {
             width: 50%;
         }
