--- a/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
+++ b/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
@@ -24,6 +24,10 @@
         margin-bottom: 0;
         padding-bottom: 0;
     }
+
+    dl {
+        margin-top: 0;
+    }
     dt {
         width: 50%;
     }
@@ -31,7 +35,7 @@
         width: 50%;
     }
     p {
-        padding: 1rem;
+        padding-left: 1rem;
     }
     p.cheat-warning {
         text-align: center;
