Challlenge link logged in and through OGS signin working.

--- a/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
+++ b/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
@@ -33,20 +33,11 @@
                 padding-bottom: 0.75rem;
             }
         }
-        dt {
-            width: 50%;
-        }
-        dd {
-            width: 50%;
-        }
-        p.cheat-warning {
-            text-align: center;
-        }
-        .cheat-alert {
-            color: chocolate;  /* mmm chocolate! */
-            margin-left: 0.5em;
-            margin-right: 0.5em;
-        }
     }
 
+    .login-options {
+            a {
+                margin-left: 0.5rem;
+            }
+        }
 }
