--- a/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
+++ b/src/components/ChallengeDetailsReviewPane/ChallengeDetailsReviewPane.styl
@@ -26,13 +26,13 @@
     }
 
     dl {
-        margin-top: 0;
+        margin-top: 0 !important;
     }
     dt {
-        width: 50%;
+        width: 50% !important;
     }
     dd {
-        width: 50%;
+        width: 50% !important;
     }
     p {
         padding-left: 1rem;
