Challenge link through register working

--- a/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
+++ b/src/views/ChallengeLinkLanding/ChallengeLinkLanding.styl
@@ -36,8 +36,9 @@
     }
 
     .login-options {
-            a {
+            .btn {
                 margin-left: 0.5rem;
             }
+
         }
 }
