--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -74,7 +74,6 @@ z = {
         backdrop       : 300,
         menu           : 310
     },
-    //player-autocomplete: 900, // not sure why this ever existed, if this doesn't cause a problem in a few weeks remove this comment. - anoek 2021-05-20
     nav-menu: {
         backdrop       : 1000,
         menu           : 1010,
@@ -233,6 +232,10 @@ light.navbar-highlight-background-color = light.bg;
 light.navbar-background-color           = light.bg;
 light.logo-svg                          = svg-load("../assets/ogs_light.svg")
 
+/** Dynamic Help **/
+
+light.dynamic-help-background-color     = light.bg;  // curiously dark needs differentiation, but light doesn't!
+
 /** Input **/
 
 light.input-bg                          = darken(light.bg, 3%)
@@ -364,6 +367,9 @@ dark.navbar-highlight-background-color  = #333
 dark.navbar-background-color            = lighten(dark.bg, 5%)
 dark.logo-svg                           = svg-load("../assets/ogs_dark.svg")
 
+/** Dynamic Help **/
+
+dark.dynamic-help-background-color     = #00001a;  // stands out boldly
 
 /** Input **/
 
