Tell the user that the challenge link was copied.

--- a/src/lib/popover.styl
+++ b/src/lib/popover.styl
@@ -31,6 +31,12 @@
     justify-content: center;
 }
 
+.popover-fadeout {
+    transition-property: opacity;
+    transition-duration: 0.5s; // matches corresponding delay in fadeout()
+    opacity: 0%;
+}
+
 .popover-container {
     position: absolute;
     display: inline-block;
