--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -398,3 +398,10 @@
     }
 }
 
+.challenge-link-copied {
+    border-radius: 0.3rem;
+    padding: 0 0.2rem 0 0.2rem;
+    white-space: nowrap;
+    themed background-color shade1;
+}
+
