Fixes per @benjaminpjones review

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -470,6 +470,7 @@ nowrap()
 
 @require "./components/material/*.styl";
 @require "./components/[A-Z]*/*.styl";
+@require "./components/[A-Z]*/[A-Z]*/*.styl";
 @require "./views/[A-Z]*/*.styl";
 @require "./views/docs/*.styl";
 
