Handle clipboard.writeText properly.

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -398,10 +398,14 @@
     }
 }
 
-.challenge-link-copied {
+.challenge-link-copy, .challenge-link-copied {
     border-radius: 0.3rem;
-    padding: 0 0.2rem 0 0.2rem;
-    white-space: nowrap;
+    padding: 0 0.3rem 0 0.3rem;
     themed background-color shade1;
 }
 
+// In the case of the "copied" message, we want it to look like
+// a nice single-line button.
+.challenge-link-copied {
+    white-space: nowrap;
+}
