Factored ChallengeLinkButton out of Play

--- a/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
+++ b/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
@@ -15,10 +15,15 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.TemplateComponent {
-    color: chocolate; // mmm... chocolate!
 
-    .hangs-around {
-        themed color info
-    }
+.challenge-link-copy, .challenge-link-copied {
+    border-radius: 0.3rem;
+    padding: 0 0.3rem 0 0.3rem;
+    themed background-color shade1;
+}
+
+// In the case of the "copied" message, we want it to look like
+// a nice single-line button.
+.challenge-link-copied {
+    white-space: nowrap;
 }
