Copy the Challenge Link URL immediately in the case of invite_only challengers (which will not appear in the challenge list with a share button to press).

--- a/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
+++ b/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
@@ -20,6 +20,7 @@
     border-radius: 0.3rem;
     padding: 0 0.3rem 0 0.3rem;
     themed background-color shade1;
+    z-index: z.challenge-link;
 }
 
 // In the case of the "copied" message, we want it to look like
