--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -85,6 +85,8 @@ z = {
     popover            : 5000,
     report             : 6000,
     swal               : 10000,
+    challenge-link     : 10010,  // We have to say "Challenge Link Copied" over the top of "Challenge Created"
+
     superchat-modal    : 50005,
     superchat          : 50010,
 }
