Invite Only Rengo Team Management Pane basically working

--- a/src/views/Overview/InviteList.styl
+++ b/src/views/Overview/InviteList.styl
@@ -16,6 +16,10 @@
  */
 
 .InviteList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .challenge-cards {
         display: flex;
         flex-wrap: wrap;
@@ -54,5 +58,13 @@
         .fab {
             float: right;
         }
+    }
+
+    .RengoManagementPane {
+        margin-top: 2rem;
+        border-style: solid;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        border-width: 1px;
     }
 }
