--- a/src/components/DynamicHelp/SettingsButtonHelp/SettingsButtonHelp.styl
+++ b/src/components/DynamicHelp/SettingsButtonHelp/SettingsButtonHelp.styl
@@ -25,6 +25,16 @@
 
     width: fit-content;
 
+    .help-controls {
+        display: flex;
+        justify-content: space-between
+        width: 100%
+
+        .fa-window-close {
+            margin-right: 0px !important;
+        }
+    }
+
     span {
         width: fit-content;
         white-space: nowrap;
