--- a/src/components/DynamicHelp/SettingsButtonHelp/SettingsButtonHelp.styl
+++ b/src/components/DynamicHelp/SettingsButtonHelp/SettingsButtonHelp.styl
@@ -54,6 +54,8 @@
     border-radius: 5px;
 
     themed background-color dynamic-help-background-color;
+    // opacity: 70%; opacity doesn't look good here.
+
     overflow-y: auto;
     user-select: none;
     z-index: z.nav-menu.menu;
