--- a/src/components/DynamicHelp/ProfilePageUsernameHelp/ProfilePageUsernameHelp.styl
+++ b/src/components/DynamicHelp/ProfilePageUsernameHelp/ProfilePageUsernameHelp.styl
@@ -15,7 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.right-nav-help {
+.profile-page-username-help {
     text-align: right ;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@
 
     // position the help popup to the left of the Nav 'button'
     transform-origin: top left;
-    transform: translate(-101%, 30%);
+    transform: translate(1%, 30%);
 
     padding: 3px 0.3rem  0 0.3rem;
 
