--- a/src/components/DynamicHelp/UsernameChangeHelp/UsernameChangeHelp.styl
+++ b/src/components/DynamicHelp/UsernameChangeHelp/UsernameChangeHelp.styl
@@ -15,7 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.right-nav-help {
+.username-change-help {
     text-align: right ;
     display: flex;
     flex-direction: column;
@@ -39,7 +39,7 @@
         white-space: nowrap;
     }
 
-    // position the help popup to the left of the Nav 'button'
+    //
     transform-origin: top left;
     transform: translate(-101%, 30%);
 
