--- a/src/components/DynamicHelp/NewUserWelcome/NewUserWelcome.styl
+++ b/src/components/DynamicHelp/NewUserWelcome/NewUserWelcome.styl
@@ -15,47 +15,26 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.new-user-welcome {
-    text-align: right ;
+.EmailBanner-container {
     display: flex;
-    flex-direction: column;
-    align-items: right;
-    justify-content: right;
-    position: absolute;
+    justify-content: center;
 
-    width: fit-content;
-
-    .help-controls {
-        display: flex;
-        justify-content: space-between
-
-        .fa-window-close {
-            margin: 0px !important;
-        }
+    .fa-times {
+        float: right;
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        cursor: pointer;
     }
+}
 
-    span {
-        width: fit-content;
-        white-space: nowrap;
+.EmailBanner {
+    width: 40rem;
+    max-width: 100vw;
+    text-align: justify;
+
+    .primary {
+        float: right;
+        margin-left: 1rem;
+        margin-top: 1rem;
     }
-
-    // position the popup
-    transform-origin: top left;
-    transform: translate(-101%, 30%);
-
-    padding: 3px 0.3rem  0 0.3rem;
-
-    border-width: 2px;
-    border-color: grey;
-    border-style: solid;
-    border-radius: 5px;
-
-    themed background-color dynamic-help-background-color;
-    opacity: 70%;
-
-    overflow-y: auto;
-    user-select: none;
-    z-index: z.nav-menu.menu;
-
-    box-shadow: -3px 0px 4px 4px rgba(148, 109, 109, 0.75);
 }
