Make zen NavBar hidden with OldNavBar.

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -343,6 +343,10 @@ body.dark #NavBar button.theme-button.dark {
     }
 }
 
+body.zen #NavBar & {
+    display: none;
+}
+
 // do for accessible what we do for dark...
 body.accessible #NavBar button.theme-button.accessible {
     background-color: accessible.primary
