--- a/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
+++ b/src/components/ChallengeLinkButton/ChallengeLinkButton.styl
@@ -27,4 +27,6 @@
 // a nice single-line button.
 .challenge-link-copied {
     white-space: nowrap;
+    text-align: center;
+    margin-top: 0.3rem;
 }
