--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -17,7 +17,7 @@
 
 navbar-width= 18rem;
 submenu-min-height = 9rem;
-hamburger-cutoff = 650px;
+hamburger-cutoff = 900px;
 
 header.NavBar {
     /body.zen & {
@@ -38,13 +38,14 @@ header.NavBar {
 
     /* desktop / wide screens */
     @media (min-width: (hamburger-cutoff + 1px)) {
-        .menu {
+
+        .Menu {
             display: block;
             margin-left: 0.5rem;
             position: relative;
             height: navbar-height;
 
-            .menu-children {
+            .Menu-children {
                 display: none;
                 position: absolute;
                 left: 0;
@@ -64,7 +65,7 @@ header.NavBar {
             &:hover, &.active {
                 themed background-color navbar-highlight-background-color
                 themed border-color primary
-                .menu-children {
+                .Menu-children {
                     display: inline-flex;
                     flex-direction: column;
                     themed border-color primary
@@ -113,7 +114,51 @@ header.NavBar {
             overflow-y: auto;
             z-index: z.nav-menu.menu;
 
-            .menu {
+            .OmniSearch-container {
+                padding-top: 0.2rem;
+                order: 1;
+
+                input, .fa-search {
+                    font-size: font-size-big
+                }
+
+                .OmniSearch-input-container {
+                    position: fixed;
+                    top: 0;
+                    left: navbar-height; // we use this to box a square around the hamburger/x icon
+                    height: navbar-height; // we use this to box a square around the hamburger/x icon
+                    right: 0;
+                    themed-important background-color navbar-background-color
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: stretch;
+                    padding-right: 0.5rem;
+                    .fa {
+                        flex-grow: 0;
+                    }
+                    input {
+                        flex-grow: 1;
+                    }
+                }
+
+                .OmniSearch {
+                    position: fixed;
+                    left: 0;
+                    right: 0;
+                    top: navbar-height
+                    bottom: 0;
+                    margin: 0;
+                    padding: 0.5rem;
+                    width: calc(100vw - 1rem); // -1rem to account for padding
+                    max-width: calc(100vw - 1rem);
+                    overflow-x: hidden;
+                    overflow-y: auto;
+
+                }
+            }
+
+            .Menu {
+                order: 2;
                 width: 100vw;
                 display: flex;
                 flex-direction: column;
@@ -122,11 +167,12 @@ header.NavBar {
 
             }
 
-            .menutitle {
+            .Menu-title {
+                order: 2;
                 font-size: font-size-big
             }
 
-            .menu-children {
+            .Menu-children {
                 display: inline-flex;
                 flex-direction: column;
                 position: static;
@@ -168,7 +214,7 @@ header.NavBar {
         }
     }
 
-    .menu {
+    .Menu {
         img {
             display: inline-block;
             width: 16px;
@@ -176,7 +222,7 @@ header.NavBar {
             margin-right: 0.5rem;
         }
 
-        .menu-children {
+        .Menu-children {
             .fa, .ogs-goban {
                 width: 16px;
                 max-width: 16px;
@@ -205,7 +251,7 @@ header.NavBar {
         display: flex;
         align-items: center;
         padding-left: 1rem;
-        .menutitle {
+        .Menu-title {
             display: inline-block;
             line-height: navbar-height;
             padding-left: 0.5rem;
@@ -361,21 +407,24 @@ header.NavBar {
         display: inline-flex;
         align-items: center;
         padding-left: 0.5rem;
+        padding-bottom: 0.1rem;
 
         .fa-search {
             margin-right: 0.3rem;
         }
 
         .OmniSearch-input {
-            width: (navbar-width - 3rem);
+            width: 7rem;
         }
 
         .OmniSearch {
             position: absolute;
             //top: navbar-height;
             //top: -0.15rem;
-            top: 0;
-            left: navbar-width;
+            //top: 0;
+            top: navbar-height;
+            //left: navbar-width;
+
             width: navbar-width;
             themed background-color navbar-highlight-background-color
             box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.16);
