Test help popup on homepage

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -474,3 +474,4 @@ nowrap()
 @require "./views/docs/*.styl";
 
 @require '../node_modules/react-table/react-table.css';
+@require '../node_modules/react-dynamic-help/lib/es5/DynamicHelp.css'; 
