WIP adding guest user flow

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -87,6 +87,8 @@ z = {
     swal               : 10000,
     challenge-link     : 10010,  // We have to say "Challenge Link Copied" over the top of "Challenge Created"
 
+    dynamic-help       : 20000,  // Help popups would like to go on top of everthing
+
     superchat-modal    : 50005,
     superchat          : 50010,
 }
