--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -15,3 +15,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+.rdh-help-item.rdh-help-item-custom {
+    z-index: z.dynamic-help;
+}
