--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -15,6 +15,12 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+// In here we customize dynamic help items instantiated by <HelpFlows>
+
 .rdh-help-item.rdh-help-item-custom {
     z-index: z.dynamic-help;
+}
+
+#help-for-profile-edit-page {
+    max-width: 15rem;
 }
