Fix duplicate HelpItem ids, and some positioning

--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -21,6 +21,6 @@
     z-index: z.dynamic-help;
 }
 
-#help-for-profile-edit-page {
+#help-for-profile-edit-page, #help-for-profile-edit-page-exv6 {
     max-width: 15rem;
 }
