--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -141,6 +141,8 @@ light.toast-fg                          = light.bg
 light.link-color                        = #0068F7
 light.link-color-active                 = darken(light.link-color, 20%)
 
+light.help-popup-bg                     = #D471DA
+
 light.default-button                    = #E6E6E0
 light.primary                           = #2480FF
 light.danger                            = #FFA600
@@ -283,6 +285,8 @@ dark.toast-bg                           = dark.fg
 dark.toast-fg                           = dark.bg
 dark.link-color                         = #539bff
 dark.link-color-active                  = darken(dark.link-color, 20%)
+
+dark.help-popup-bg                     = #4E134C
 
 dark.default-button                     = lighten(dark.bg, 10%)
 dark.default-button-color               = dark.fg
@@ -476,4 +480,4 @@ nowrap()
 @require "./views/docs/*.styl";
 
 @require '../node_modules/react-table/react-table.css';
-@require '../node_modules/react-dynamic-help/lib/es5/DynamicHelp.css'; 
+@require '../node_modules/react-dynamic-help/lib/es5/DynamicHelp.css';
