--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -19,6 +19,9 @@
 
 .rdh-help-item.rdh-help-item-custom {
     z-index: z.dynamic-help;
+    themed background-color help-popup-bg
+    themed border-color help-popup-bg
+    themed color fg
 }
 
 #help-for-profile-edit-page, #help-for-profile-edit-page-exv6 {
