Added master switch to settings for dynamic help

--- a/src/views/Settings/Settings.styl
+++ b/src/views/Settings/Settings.styl
@@ -380,6 +380,10 @@
 #SelectedSettingsContainer {
     flex: 1;
     display: flex;
+
+    .help-details-greyed {
+        themed color shade4
+    }
 }
 
 // Mobile
