--- a/src/views/LadderList/LadderList.styl
+++ b/src/views/LadderList/LadderList.styl
@@ -38,4 +38,37 @@
         text-align: left;
 
     }
+
+}
+
+.MyLadders {
+    text-align: left;
+    margin: auto;
+
+    .player-rank {
+        display: inline-block;
+        margin-right: 1rem;
+        min-width: 3rem;
+    }
+
+    .MyLadders-row {
+        margin: auto;
+        width: 30rem;
+        max-width: 100vw;
+        padding-bottom: 0.5rem;
+    }
+
+    .group-icon {
+        display: inline-block;
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .fa-list-ol {
+        color: supporter;
+    }
+
+    .fa-list-ol, .group-icon {
+        margin-right: 0.5rem;
+    }
 }
