--- a/src/views/LadderList/LadderList.styl
+++ b/src/views/LadderList/LadderList.styl
@@ -52,8 +52,7 @@
     }
 
     .MyLadders-row {
-        margin: auto;
-        width: 30rem;
+        margin-left: 2rem;
         max-width: 100vw;
         padding-bottom: 0.5rem;
     }
