Incorporate rdh new "popup dismissal methods"

--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -24,6 +24,11 @@
     themed color fg
 }
 
+.rdh-help-item>.rdh-popup-dismissers {
+    themed color shade1
+    cursor: pointer;
+}
+
 #help-for-profile-edit-page, #help-for-profile-edit-page-exv6 {
     max-width: 15rem;
 }
