--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -77,6 +77,7 @@ z = {
     nav-menu: {
         backdrop       : 1000,
         menu           : 1010,
+        omnisearch     : 1100,
     },
     modal: {
         backdrop       : 2000,
