Switched back to old turn indicator & better centering for other icons in the nav bar

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -478,6 +478,13 @@ header.NavBar {
             margin-bottom: 0px !important;
         }
     }
+
+    .FriendIndicator, .IncidentReportIndicator, .NotificationIndicator {
+        .count {
+            // This offsets the baseline padding added to the count so things center correctly.
+            margin-bottom: -0.2rem;
+        }
+    }
 }
 
 button.theme-button {
