--- a/src/components/NotificationIndicator/NotificationIndicator.styl
+++ b/src/components/NotificationIndicator/NotificationIndicator.styl
@@ -24,5 +24,9 @@
     }
     .count {
         font-size: font-size-smaller;
+        themed color shade4
+        &.active {
+            themed color primary
+        }
     }
 }
