--- a/src/components/TurnIndicator/TurnIndicator.styl
+++ b/src/components/TurnIndicator/TurnIndicator.styl
@@ -5,9 +5,10 @@
     display: flex;
     align-items: center;
     align-content: center;
-    justify-content: center;
+    justify-content: flex-end;
     flex-basis: 3rem;
     cursor: pointer;
+
 
     .count {
         visibility: hidden;
