Get rid of tournament, groups, and ladders from the nav menu

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -466,8 +466,12 @@ header.NavBar {
     }
 
     .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator, .TurnIndicator, .NotificationIndicator, .ChatIndicator {
-        padding-left: 0.7rem;
-        padding-right: 0.7rem;
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+    }
+
+    .TurnIndicator {
+        width: auto;
     }
 
     .ChatIndicator {
