Tournament tab tweaks for mobile

--- a/src/views/TournamentList/TournamentList.styl
+++ b/src/views/TournamentList/TournamentList.styl
@@ -35,11 +35,17 @@
         justify-content: space-between;
     }
 
+    .tabs-container {
+        text-align: center;
+    }
     .tab {
         cursor: pointer;
-        margin-left: 1.0rem;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
         padding: 0.4rem;
         border-bottom: 2px solid transparent;
+        white-space: nowrap;
+        display: inline-block;
     }
 
     .tab:hover {
