Force nowrap on navbar username+down arrow

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -304,6 +304,10 @@ header.NavBar {
             cursor: pointer;
             align-items: center;
 
+            .username {
+                white-space: nowrap;
+            }
+
 
             .notification-indicator {
                 left: 0.5rem;
