Tweaking new RDH dialog colors

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -142,7 +142,6 @@ light.toast-fg                          = light.bg
 light.link-color                        = #0068F7
 light.link-color-active                 = darken(light.link-color, 20%)
 
-light.help-popup-bg                     = #D471DA
 
 light.default-button                    = #E6E6E0
 light.primary                           = #2480FF
@@ -166,6 +165,9 @@ light.chart-line                        = #184A6B
 light.error-boundary-bg                 = lighten(light.reject, 50%)
 light.error-boundary-fg                 = darken(light.reject, 50%)
 
+
+//light.help-popup-bg                     = #D471DA
+light.help-popup-bg                     = light.primary
 
 light.indicate-online                   = #6f6
 light.indicate-online-shadow            = -1px -1px 0 #afa,  1px -1px 0 #8c8, -1px 1px 0 #8c8, 1px 1px 0 #6a6;
@@ -287,8 +289,6 @@ dark.toast-fg                           = dark.bg
 dark.link-color                         = #539bff
 dark.link-color-active                  = darken(dark.link-color, 20%)
 
-dark.help-popup-bg                     = #4E134C
-
 dark.default-button                     = lighten(dark.bg, 10%)
 dark.default-button-color               = dark.fg
 dark.primary                            = darken(light.primary, core-color-darken-amount)
@@ -307,6 +307,9 @@ dark.chart-area                         = #092D3E
 dark.chart-line                         = #329BE0
 dark.error-boundary-bg                  = darken(light.reject, 50%)
 dark.error-boundary-fg                  = lighten(light.reject, 50%)
+
+//dark.help-popup-bg                     = #4E134C
+dark.help-popup-bg                      = dark.primary
 
 dark.indicate-online                    = #6f6
 dark.indicate-online-shadow             = -1px -1px 0 #afa,  1px -1px 0 #8c8, -1px 1px 0 #8c8, 1px 1px 0 #6a6;
