Style the rdh target highlight for ogs

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -438,6 +438,31 @@ accessible.weak-win                           = darken(accessible.win, 35%)
 accessible.weak-loss                          = darken(accessible.loss, 35%)
 
 
+:root {
+    --primary: light.primary;
+    --danger: light.danger;
+    --success: light.success;
+    --info: light.info;
+    --reject: light.reject;
+}
+
+body.accessible {
+    --primary: accessible.primary;
+    --danger: accessible.danger;
+    --success: accessible.success;
+    --info: accessible.info;
+    --reject: accessible.reject;
+}
+body.dark {
+    --primary: dark.primary;
+    --danger: dark.danger;
+    --success: dark.success;
+    --info: dark.info;
+    --reject: dark.reject;
+}
+
+
+
 /************/
 /************/
 /************/
