--- a/src/views/HelpFlows/HelpFlows.styl
+++ b/src/views/HelpFlows/HelpFlows.styl
@@ -34,6 +34,10 @@
     font-size: 0.9rem;
 }
 
+.rdh-target-highlight {
+    box-shadow: 0 0 2px 2px var(--primary) !important;
+}
+
 #help-for-profile-edit-page, #help-for-profile-edit-page-exv6 {
     max-width: 15rem;
 }
