Added InfoBall help to clean up the account settings page

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -84,6 +84,7 @@ z = {
         container      : 2010,
     },
     popover            : 5000,
+    infoball           : 5010,
     report             : 6000,
     swal               : 10000,
     challenge-link     : 10010,  // We have to say "Challenge Link Copied" over the top of "Challenge Created"
