Update InfoBall to behave better on mobile

--- a/src/components/InfoBall/InfoBall.styl
+++ b/src/components/InfoBall/InfoBall.styl
@@ -52,4 +52,10 @@
          z-index: z.modal.backdrop;
      }
 
+
+     &.force-hide-details {
+         .details {
+             display: none !important;
+         }
+     }
  }
