--- a/src/components/InfoBall/InfoBall.styl
+++ b/src/components/InfoBall/InfoBall.styl
@@ -39,6 +39,8 @@
              border-radius: 0.5rem;
              padding: 0.5rem;
              z-index: z.infoball;
+             top: 1.5rem;
+             left: 0;
          }
      }
 
