Tweak site supporter teaser on game page

--- a/src/views/Game/AIReview.styl
+++ b/src/views/Game/AIReview.styl
@@ -222,6 +222,15 @@
             flex: 1;
         }
     }
+
+    .become-a-site-supporter-line {
+        display: block;
+        width: 15rem;
+        margin: auto;
+        max-width: 100vw;
+        font-size: font-size-small;
+        word-break: nobreak;
+    }
 }
 
 .ai-review-list, .ai-review-more-info {
