--- a/src/components/PaginatedTable/PaginatedTable.styl
+++ b/src/components/PaginatedTable/PaginatedTable.styl
@@ -18,19 +18,23 @@
 .PaginatedTable {
     position: relative;
     max-width: 100vw;
-    overflow-x: auto;
-    table {
-        width: 100%;
-        max-width: 100vw;
-        border-collapse: collapse;
-        tr {
-            border-bottom: solid 1px transparent;
-            themed border-bottom-color shade4;
-        }
-        th {
-            text-align: left;
-            color: #919191;
-            font-weight: normal;
+
+    div {
+        overflow-x: auto;
+
+        table {
+            width: 100%;
+            max-width: 100vw;
+            border-collapse: collapse;
+            tr {
+                border-bottom: solid 1px transparent;
+                themed border-bottom-color shade4;
+            }
+            th {
+                text-align: left;
+                color: #919191;
+                font-weight: normal;
+            }
         }
     }
 
