Separate notifications settings sections with visible horizontal rules.

--- a/src/components/Chat/ChatDetails.styl
+++ b/src/components/Chat/ChatDetails.styl
@@ -24,21 +24,22 @@
     themed color fg
     padding: 0.3rem;
 
+    hr {
+        opacity: 1;
+        border: 1px solid gray;
+        width: 100%;
+    }
 
-    h6 {
+    a {
+        text-align: right;
+    }
+
+    h4 {
         margin: 0;
         padding: 0;
-        margin-top: 0.5rem;
-
-        font-size: 0.8rem;
-
         display: flex;
         justify-content: space-between;
         align-items: center;
-
-        a {
-            font-size: 1.0rem;
-        }
     }
 
     .notify-option {
