Highlight variation that is specified in the URL.

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -160,6 +160,7 @@ light.personal-bg                       = lightblue
 light.hidden-bg                         = #D6B1F4
 light.variation                         = #0088cc
 light.variation-hover                   = #005580
+light.url-selected-variation            = #ff0
 light.email-banner                      = #CEDBCF
 light.chart-area                        = #E6F6FE
 light.chart-line                        = #184A6B
@@ -303,6 +304,7 @@ dark.personal-bg                        = darken(light.personal-bg, 70%)
 dark.hidden-bg                          = #300352
 dark.variation                          = #00aaff
 dark.variation-hover                    = #1A93D0
+dark.url-selected-variation             = #770
 dark.email-banner                       = #2A492B
 dark.chart-area                         = #092D3E
 dark.chart-line                         = #329BE0
