--- a/src/views/Game/GameChat.styl
+++ b/src/views/Game/GameChat.styl
@@ -125,6 +125,10 @@ game-chat-user-list-width=10rem;
         cursor: pointer;
     }
 
+    .variation.url-selected {
+        themed background-color url-selected-variation
+    }
+
     .position {
         cursor: crosshair;
     }
