Add preference to show tournament indicator on mobile
Also ported the TournamentIcon be a FC

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -154,6 +154,9 @@ header.NavBar {
             padding-left: 0 !important;
             flex-basis: 2rem;
         }
+        .TournamentIndicator.hidden-on-mobile {
+            display: none;
+        }
 
         &.hamburger-expanded {
             .OmniSearch-container  {
